tests/errors/parser-errors/atblock/at_block_empty_id.smark
@_ _@;
body
@_end_@
